OGM-1506 Introduce a Maven profile to test on JDK10